@@ -1,20 +1,9 @@
 package edu.ucsb.cs156.example.services;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-
-
-import edu.ucsb.cs156.example.entities.UCSBSubject;
-import lombok.extern.slf4j.Slf4j;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
-import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -24,26 +13,18 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.beans.factory.annotation.Value;
 
-
-@Slf4j
 @Service("UCSBSubjects")
 public class UCSBSubjectsService {
 
         @Value("${app.ucsb.api.key}") private String ucsbApiKey;
 
-        ObjectMapper mapper = new ObjectMapper();
-
         private RestTemplate restTemplate = new RestTemplate();
-
-        public UCSBSubjectsService(RestTemplateBuilder restTemplateBuilder) {
-                restTemplate = restTemplateBuilder.build();
-        }
 
         public static final String ENDPOINT = "https://api.ucsb.edu/students/lookups/v1/subjects?includeInactive=false";
         
         public String getJSON() throws HttpClientErrorException {
                 HttpHeaders headers = new HttpHeaders();
-                headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+                headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
                 headers.setContentType(MediaType.APPLICATION_JSON);
                 headers.set("ucsb-api-key", this.ucsbApiKey);
                 headers.set("ucsb-api-version", "1.6");
@@ -52,17 +33,5 @@ public class UCSBSubjectsService {
 
                 ResponseEntity<String> re = restTemplate.exchange(ENDPOINT, HttpMethod.GET, entity, String.class);
                 return re.getBody();
-        }
-
-        public List<UCSBSubject> get() throws JsonProcessingException {
-
-                List<UCSBSubject> subjectsList = new ArrayList<UCSBSubject>();
-                
-                String json = getJSON();
-                UCSBSubject[] subjects = mapper.readValue(json, UCSBSubject[].class);
-                subjectsList = new ArrayList(Arrays.asList(subjects));
-                log.info("subjectsList={}",subjectsList);
-
-                return subjectsList;
         }
 }
